# sinkercli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
pkg/: PKGBUILD  PKGBUILD-bin
src/: app.rs  config.rs  main.rs
src/audio/: detect.rs  mod.rs  pulse.rs
src/ui/: dialogs.rs  mod.rs  panels.rs
